# prediction-api-v2

./: README.md  main.py  pyproject.toml  requeriments.txt  requirements.txt  requiremexts.txt
routes/: DecisionTreeRegressor.pkl  prediction_model.py
schemas/: prediction.py
