[tool.poetry]
name = "tp2-api"
version = "0.1.0"
description = ""
authors = ["KlausM23 <57195949+KlausM23@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
